# ory-auth-example-2

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
app/: Cargo.toml
app/src/: database_calls.rs  error_template.rs  kratos_html.rs  lib.rs
app/src/auth/: extractors.rs  kratos_error.rs  kratos_html.rs  login.rs  logout.rs  mod.rs  recovery.rs  registration.rs  session.rs  settings.rs  verification.rs
app/src/business_logic/: database_calls.rs  migrations.rs  mod.rs  permissions.rs
app/src/posts/: create_posts.rs  mod.rs  post.rs  posts_page.rs
e2e/: Cargo.toml
e2e/features/: 0_test.feature  1_register.feature  2_login.feature  3_logout.feature
e2e/tests/: app_suite.rs
e2e/tests/fixtures/: mod.rs  steps.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
ids/src/: lib.rs
keto/: config.ts  keto.yaml
kratos/: kratos.yaml
server/: Cargo.toml
server/src/: main.rs
