[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
cucumber = {version="0.20.2",features=["tracing","macros"]}
fantoccini = "0.19.3"
pretty_assertions = "1.4.0"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "time"] }
url = "2.4.0"
reqwest = "0.11.25"
tracing = "0.1.40"
ids.workspace = true

[[test]]
name = "app_suite"
harness = false    # Allow Cucumber to print output instead of libtest

[features]
#vscode thing to get autocomplete
ssr=[]


